Первая связка apigateway c keycloak

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-server
 spring.profiles.active=native
 server.port=8071
-spring.cloud.config.server.native.search-locations=C:\\Users\\User\\IdeaProjects\\habr-keycloak-apigateway\\src\\main\\resources
+spring.cloud.config.server.native.search-locations=C:\\projects\\draftit52v2backend\\src\\main\\resources
