--- a/src/main/resources/gateway-dev.properties
+++ b/src/main/resources/gateway-dev.properties
@@ -6,10 +6,10 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 server.port=8081
 spring.cloud.gateway.default-filters=TokenRelay=
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/habr
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/it52
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
-spring.security.oauth2.client.registration.keycloak.client-id=habr-client
-spring.security.oauth2.client.registration.keycloak.client-secret=CHbDhwOTmHvOilLhx6YyMfitUnVlel9x
+spring.security.oauth2.client.registration.keycloak.client-id=it52-client
+spring.security.oauth2.client.registration.keycloak.client-secret=7O8qVk3oCvrtCasdYseYsoB8teECIviC
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
 
