--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>4.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
