--- a/event-service/src/main/resources/application.yaml
+++ b/event-service/src/main/resources/application.yaml
@@ -1,21 +1,24 @@
 server:
-  port: 8085
+  port: 8086
 
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/userdb
     username: postgres
     password: user
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        format_sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://keycloak:8080/realms/it52
       client:
         registration:
           keycloak:
@@ -33,8 +36,12 @@ spring:
             user-info-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/userinfo
             jwk-set-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/certs
             user-name-attribute: preferred_username
+
+# Optional: ??????????? SQL
 logging:
   level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.security: DEBUG
     org.springframework.web.client.RestTemplate: DEBUG
     org.springframework.security.oauth2.client: TRACE
