--- a/event-service/src/main/resources/application.yaml
+++ b/event-service/src/main/resources/application.yaml
@@ -1,7 +1,14 @@
 server:
   port: 8086
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
+
 spring:
+  application:
+    name: event-service
   datasource:
     url: jdbc:postgresql://localhost:5432/userdb
     username: postgres
@@ -37,7 +44,6 @@ spring:
             jwk-set-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/certs
             user-name-attribute: preferred_username
 
-# Optional: ??????????? SQL
 logging:
   level:
     org.hibernate.SQL: DEBUG
