--- a/gateway-server/src/main/resources/application.yaml
+++ b/gateway-server/src/main/resources/application.yaml
@@ -1,13 +1,11 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka
-    register-with-eureka: true
-    fetch-registry: true
-  instance:
-    hostname: localhost
+      defaultZone: http://eureka-server:8761/eureka/
 
 spring:
+  application:
+    name: gateway-server
   cloud:
     gateway:
       discovery:
@@ -16,6 +14,25 @@ spring:
           lower-case-service-id: true
       default-filters:
         - TokenRelay=
+      routes:
+        - id: keycloak
+          uri: http://keycloak:8080
+          predicates:
+            - Path=/realms/**
+        - id: user-service
+          uri: lb://user-service
+          predicates:
+            - Path=/api/users/**
+          filters:
+            - RemoveRequestHeader=Cookie
+        - id: event-service
+          uri: lb://event-service
+          predicates:
+            - Path=/api/events/**
+        - id: resource-service
+          uri: lb://resource-service
+          predicates:
+            - Path=/api/resources/**
   security:
     oauth2:
       client:
@@ -28,14 +45,16 @@ spring:
         provider:
           keycloak:
             issuer-uri: http://keycloak:8080/realms/it52
-            authorization-uri: http://localhost:8080/realms/it52/protocol/openid-connect/auth
-            token-uri: http://localhost:8080/realms/it52/protocol/openid-connect/token
-            user-info-uri: http://localhost:8080/realms/it52/protocol/openid-connect/userinfo
-            jwk-set-uri: http://localhost:8080/realms/it52/protocol/openid-connect/certs
+            authorization-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/auth
+            token-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/token
+            user-info-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/userinfo
+            jwk-set-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/certs
             user-name-attribute: preferred_username
 logging:
   level:
-    org.springframework.security.oauth2.client.registration: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.web.client.RestTemplate: DEBUG
+    org.springframework.security.oauth2.client: TRACE
 
 server:
   port: 8081
