--- a/resource-server/src/main/resources/application.yaml
+++ b/resource-server/src/main/resources/application.yaml
@@ -4,13 +4,11 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka
-    register-with-eureka: true
-    fetch-registry: true
-  instance:
-    prefer-ip-address: true
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
+  application:
+    name: resource-server
   security:
     oauth2:
       resourceserver:
@@ -27,10 +25,10 @@ spring:
         provider:
           keycloak:
             issuer-uri: http://keycloak:8080/realms/it52
-            authorization-uri: http://localhost:8080/realms/it52/protocol/openid-connect/auth
-            token-uri: http://localhost:8080/realms/it52/protocol/openid-connect/token
-            user-info-uri: http://localhost:8080/realms/it52/protocol/openid-connect/userinfo
-            jwk-set-uri: http://localhost:8080/realms/it52/protocol/openid-connect/certs
+            authorization-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/auth
+            token-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/token
+            user-info-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/userinfo
+            jwk-set-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/certs
             user-name-attribute: preferred_username
 jwt:
   auth:
