--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,7 +1,14 @@
 server:
   port: 8085
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
+
 spring:
+  application:
+    name: user-service
   datasource:
     url: jdbc:postgresql://localhost:5432/userdb
     username: postgres
