--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -99,11 +99,28 @@
     </dependencyManagement>
     <build>
         <plugins>
-            <!-- Плагин Spring Boot для запуска приложения -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.34</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+
+            <!-- Плагин Spring Boot -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.4</version> <!-- Убедись, что версия совпадает с твоей версией Spring Boot -->
+                <version>3.2.4</version>
             </plugin>
         </plugins>
     </build>
