--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/userdb
-    username: postgres
-    password: user
+    url: jdbc:postgresql://localhost:5432/it52_mbase501
+    username: dborisov
+    password: dborisov
   jpa:
     hibernate:
       ddl-auto: update
