--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -85,6 +85,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
