--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ spring:
   config:
     import: optional:configserver:http://config-server:8071
 eureka:
+  server:
+    eviction-interval-timer-in-ms: 10000
   client:
     service-url:
       defaultZone: http://eureka-server:8070/eureka
