--- a/resource-server/src/main/resources/application.yaml
+++ b/resource-server/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ server:
   port: 8090
 
 eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 10
+    lease-expiration-duration-in-seconds: 30
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
