--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -65,6 +65,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
