разработка нового сервиса по регистрации пользователя на событие.

--- a/event-registration-service/src/main/resources/application.yaml
+++ b/event-registration-service/src/main/resources/application.yaml
@@ -8,10 +8,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka/
-
 spring:
   application:
-    name: event-service
+    name: event-registration-service
   kafka:
     bootstrap-servers: kafka:9092
     producer:
@@ -36,6 +35,20 @@ spring:
           issuer-uri: http://keycloak:8080/realms/it52
       client:
         registration:
+          event-service:
+            client-id: it52-client
+            client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
+            scope: openid, profile, email
+            provider: keycloak
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+          user-service:
+            client-id: it52-client
+            client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
+            scope: openid, profile, email
+            provider: keycloak
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
           keycloak:
             client-id: it52-client
             client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
@@ -59,3 +72,15 @@ logging:
     org.springframework.security: DEBUG
     org.springframework.web.client.RestTemplate: DEBUG
     org.springframework.security.oauth2.client: TRACE
+    reactor.netty.http.client: DEBUG
+    org.springframework.web.reactive.function.client.ExchangeFunctions: TRACE
+    org.springframework.web.reactive.function.client.ExchangeFilterFunction: TRACE
+    org.springframework.web.reactive.function.client.WebClient: DEBUG
+    com.example.client: DEBUG
+user:
+  service:
+    url: http://user-service:8085
+
+event:
+  service:
+    url: http://event-service:8086
