--- a/gateway-server/src/main/resources/application.yaml
+++ b/gateway-server/src/main/resources/application.yaml
@@ -42,6 +42,12 @@ spring:
             - Path=/api/resources/**
           filters:
             - TokenRelay=
+        - id: event-registration-service
+          uri: lb://event-registration-service
+          predicates:
+            - Path=/api/participations/**
+          filters:
+            - TokenRelay=
   security:
     oauth2:
       client:
