--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,20 @@ services:
       "
     networks:
       - app-network
+  minio:
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"   # Web UI/API
+      - "9001:9001"   # Admin Console
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+    networks:
+      - app-network
 
   config-server:
     build:
@@ -222,3 +236,6 @@ services:
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  minio_data:
