--- a/event-service/src/main/resources/application.yaml
+++ b/event-service/src/main/resources/application.yaml
@@ -8,6 +8,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka/
+minio:
+  url: http://minio:9000
+  access-key: minio
+  secret-key: minio123
+  bucket: event-images
 
 spring:
   application:
