--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -2,14 +2,16 @@
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY . .
+#RUN mvn clean package -DskipTests
 
 # Этап запуска
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY --from=build /app/target/user-service-*.jar app.jar
 
-# Указываем порт, на котором будет работать приложение
+# Указываем порты, которые будут проброшены
 EXPOSE 8085
+EXPOSE 5005
 
-# Запуск приложения
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Запуск приложения с включенным удалённым дебагом на порту 5005
+ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "-jar", "app.jar"]
