--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8085
-
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
@@ -9,24 +6,9 @@ eureka:
     service-url:
       defaultZone: http://eureka-server:8761/eureka/
 
-minio:
-  url: http://minio:9000
-  access-key: minio
-  secret-key: minio123
-  bucket: user-avatars
-image:
-  proxy:
-    base-url: http://localhost:8089
-
-keycloak:
-  auth-server-url: http://keycloak:8080
-  realm: it52
-  client-id: it52-client
-  client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
-
 spring:
   application:
-    name: user-service
+    name: auth-service
   kafka:
     bootstrap-servers: kafka:9092
     producer:
@@ -38,21 +20,13 @@ spring:
     password: dborisov
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+server:
+  port: 8099
 jwt:
   secret: c29tZXN1cGVyc2VjdXJla2V5Zm9yamF3dHRva2VuYmFzZTY0IQ==
-logging:
-  level:
-    org.springframework.security: DEBUG
-    org.springframework.web.client.RestTemplate: DEBUG
-    org.springframework.security.oauth2.client: TRACE
-    com.it52.user: DEBUG
-
-eventregistration:
-  service:
-    url: http://event-registration-service:8088
