--- a/event-registration-service/src/main/resources/application.yaml
+++ b/event-registration-service/src/main/resources/application.yaml
@@ -28,42 +28,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://keycloak:8080/realms/it52
-      client:
-        registration:
-          event-service:
-            client-id: it52-client
-            client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
-            scope: openid, profile, email
-            provider: keycloak
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-          user-service:
-            client-id: it52-client
-            client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
-            scope: openid, profile, email
-            provider: keycloak
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-          keycloak:
-            client-id: it52-client
-            client-secret: vHgP94O0lsGldQHfcHreP02y4X0PsRKQ
-            scope: openid, profile, email
-            provider: keycloak
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-        provider:
-          keycloak:
-            authorization-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/auth
-            issuer-uri: http://keycloak:8080/realms/it52
-            token-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/token
-            user-info-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/userinfo
-            jwk-set-uri: http://keycloak:8080/realms/it52/protocol/openid-connect/certs
-            user-name-attribute: preferred_username
+jwt:
+  secret: c29tZXN1cGVyc2VjdXJla2V5Zm9yamF3dHRva2VuYmFzZTY0IQ==
 
 logging:
   level:
