--- a/gateway-server/Dockerfile
+++ b/gateway-server/Dockerfile
@@ -11,6 +11,7 @@ COPY --from=build /app/target/gateway-server-*.jar app.jar
 
 # Указываем порт, на котором будет работать приложение
 EXPOSE 8081
+EXPOSE 5006
 
-# Запуск приложения
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Запуск приложения с включенным удалённым дебагом на порту 5005
+ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006", "-jar", "app.jar"]
