--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -5,10 +5,16 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka/
-
+telegram:
+  bot:
+    token: 8374405758:AAET0reFj48vgBDInU1071EpJP7Jxgxy4eY
 spring:
   application:
     name: auth-service
+  data:
+    redis:
+      host: redis
+      port: 6379
   kafka:
     bootstrap-servers: kafka:9092
     producer:
@@ -20,7 +26,7 @@ spring:
     password: dborisov
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
