--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,23 @@
 version: '3.8'
 
 services:
-  keycloak:
-    image: quay.io/keycloak/keycloak:24.0.1
-    container_name: keycloak
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+#  keycloak:
+#    image: quay.io/keycloak/keycloak:24.0.1
+#    container_name: keycloak
+#    environment:
+#      KEYCLOAK_ADMIN: admin
+#      KEYCLOAK_ADMIN_PASSWORD: admin
+#    ports:
+#      - "8080:8080"
+#    command: start-dev --hostname=keycloak --hostname-strict=false
+#    networks:
+#      - app-network
+
+  redis:
+    image: redis:7
+    container_name: redis
     ports:
-      - "8080:8080"
-    command: start-dev --hostname=keycloak --hostname-strict=false
+      - "6379:6379"
     networks:
       - app-network
 
@@ -29,38 +37,41 @@ services:
       - app-network
 
   zookeeper:
-    image: bitnami/zookeeper:3.9
+    image: wurstmeister/zookeeper:latest
     container_name: zookeeper
     ports:
       - "2181:2181"
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
+#    environment:
+#      - ALLOW_ANONYMOUS_LOGIN=yes
     networks:
       - app-network
 
   kafka:
-    image: bitnami/kafka:3.7
+    image: wurstmeister/kafka:2.13-2.8.1
     container_name: kafka
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - ALLOW_PLAINTEXT_LISTENER=yes
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_BROKER_ID: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     depends_on:
       - zookeeper
     volumes:
       - ./create-topics.sh:/create-topics.sh
+      - kafka-data:/kafka
     command: >
       bash -c "
-        /opt/bitnami/scripts/kafka/run.sh &
+        /usr/bin/start-kafka.sh &
         sleep 10 &&
         /create-topics.sh &&
         wait
       "
     networks:
       - app-network
+
   minio:
     image: minio/minio
     container_name: minio
@@ -137,9 +148,9 @@ services:
     depends_on:
       - eureka-server
       - config-server
-      - keycloak
     ports:
       - "8081:8081"
+      - "5006:5006"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8071
@@ -175,7 +186,6 @@ services:
     depends_on:
       - eureka-server
       - postgres
-      - keycloak
       - kafka
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/it52_mbase501
@@ -194,10 +204,10 @@ services:
     container_name: event-service
     ports:
       - "8086:8086"
+      - "5008:5008"
     depends_on:
       - eureka-server
       - postgres
-      - keycloak
       - kafka
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/it52_mbase501
@@ -239,12 +249,13 @@ services:
     container_name: auth-service
     ports:
       - "8099:8099"
+      - "5007:5007"
     depends_on:
       - eureka-server
       - config-server
-      - keycloak
       - postgres
       - kafka
+      - redis
     environment:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: optional:configserver:http://config-server:8071
@@ -253,6 +264,8 @@ services:
       SPRING_DATASOURCE_USERNAME: dborisov
       SPRING_DATASOURCE_PASSWORD: dborisov
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
     networks:
       - app-network
 
@@ -268,7 +281,6 @@ services:
       - event-service
       - user-service
       - postgres
-      - keycloak
       - kafka
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/it52_mbase501
@@ -284,3 +296,4 @@ networks:
 
 volumes:
   minio_data:
+  kafka-data:
